# imbalance-effects-on-synthetic-data

./: .gitignore  README.md  pyproject.toml
config/: config.py  config.yaml  datasets.yaml
src/: run_experiment.py
src/auto_mpg/: data_preparation_auto_mpg.ipynb
src/credit/: data_preparation_credit.ipynb
src/mammographic_mass/: data_preparation_mammographic_mass.ipynb
src/monks/: data_preparation_monks.ipynb
src/phishing/: data_preparation_phishing.ipynb
src/results_analysis/: paper_figures.ipynb
src/vote/: data_preparation_vote.ipynb
